# app/docs/v1_swagger.yaml
@@ -44,23 +44,18 @@ definitions:
     type: object
   models_v1.QuickGenerateIn:
     properties:
-      date:
-        type: string
-      room_id:
-        type: integer
-      service_category_id:
+      generate_days:
         type: integer
       service_id:
         type: integer
-      store_id:
-        type: integer
+      start_date:
+        type: string
       user_id:
         type: integer
     required:
-    - date
-    - room_id
+    - generate_days
     - service_id
-    - store_id
+    - start_date
     - user_id
     type: object
 host: localhost:8080
